--- a/backend/uploads/.env.example
+++ b/backend/uploads/.env.example
@@ -1,4 +1,4 @@
-# .env.example
-MONGO_URI=
-SECRET_KEY=
+#Paste this to your own .env file
+MONGO_URI=mongodb+srv://jiu45:yDnKvhzWMCdN3hzJ@jobportal.bcikjab.mongodb.net/?appName=JobPortal
+SECRET_KEY=NobitaLovesDoraemonButDoraemonLovesDorayaki
 PORT=8000
