--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "framer-motion": "^12.23.25",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.556.0",
     "moment": "^2.30.1",
     "react": "^19.2.0",
