Add AI features and tracking history

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -2,3 +2,4 @@
 MONGO_URI=mongodb+srv://jiu45:yDnKvhzWMCdN3hzJ@jobportal.bcikjab.mongodb.net/?appName=JobPortal
 SECRET_KEY=NobitaLovesDoraemonButDoraemonLovesDorayaki
 PORT=8000
+GROQ_API_KEY=
