--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
-    "socket.io": "^4.8.1"
+    "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.17.2",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
