--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.17",
-    "framer-motion": "^12.23.25",
+    "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.24.10",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.556.0",
     "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^7.10.1",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.17"
+    "react-router-dom": "^7.12.0",
+    "socket.io-client": "^4.8.3",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
